# baby-diagnostics

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  dev_start.sh  docker-compose.dev.yml  ph_color_verification.html  setup.sh
.claude/: settings.json
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 739501507de5_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: analysis.py  auth.py  babies.py  chat.py  health.py  scans.py  users.py
backend/app/core/: exceptions.py  security.py
backend/app/cv/: analyzer.py  color_matching.py  preprocessing.py
backend/app/cv/calibration/: default.yaml
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  baby.py  biomarker.py  chat.py  scan.py  user.py
backend/app/llm/: client.py  conversation.py  prompts.py
backend/app/middleware/: rate_limiter.py  security_headers.py
backend/app/repositories/: baby_repo.py  chat_repo.py  scan_repo.py  user_repo.py
backend/app/schemas/: auth.py  baby.py  scan.py  user.py
backend/app/services/: analysis_service.py  auth_service.py  chat_service.py
docs/: ARCHITECTURE.md  biomarker-app-mockups.html
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAnalysis.ts  useAuth.ts  useCamera.ts  useScans.ts  useWebSocket.ts
scripts/: gen_ph_colors.py
(+27 files in other folders)
